--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,13 +94,12 @@ aside {
     background-color: #2589bd;
     display: block;
 }
-/*merged similar to article seo main content with pictures. modify/check when needed*/
+
 aside > section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-/*merged similar formats together to this section*/
 aside > h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -112,12 +111,8 @@ aside > section > img {
     max-width: 150px;
 }
 
-
-
-
 /*originally .search-engine-optimization, .online-reputation-management, .social-media-marketing - group css elements 
-together if sharing similar elements; refer to run-buddy and class work if necessary. article appears to group 
-this section altogether.*/
+together if sharing similar elements.*/
 article {
     margin-bottom: 20px;
     padding: 50px;
@@ -127,7 +122,6 @@ article {
     color: #ffffff;
 }
 
-/*may overrule class below - check or switch or group sections if needed*/
 article > p {
     font-size: 20px;
 }
